--- a/login.html
+++ b/login.html
@@ -242,7 +242,7 @@
                 <h2 class="mt-6 text-3xl font-extrabold text-gray-900">Sign in to your account</h2>
                 <p class="mt-2 text-sm text-gray-600">
                     Or
-                    <a href="#register" class="font-medium text-indigo-600 hover:text-indigo-500">
+                    <a href="register.html" class="font-medium text-indigo-600 hover:text-indigo-500">
                         register for a new account
                     </a>
                 </p>
