--- a/register.html
+++ b/register.html
@@ -222,7 +222,7 @@
                 </div>
 
                 <div>
-                    <button type="submit"
+                    <a href="user_profile.html" type="submit" 
                         class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                             <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400 transition ease-in-out duration-150"
@@ -234,7 +234,7 @@
                             </svg>
                         </span>
                         Create Account
-                    </button>
+                    </a>
                 </div>
             </form>
         </div>
